--- a/Week2/Week2Homework.ipynb
+++ b/Week2/Week2Homework.ipynb
@@ -28,8 +28,10 @@
     "WHERE Date = '2023-03-18';"
    ],
    "metadata": {
-    "collapsed": false
-   }
+    "collapsed": false,
+    "is_executing": true
+   },
+   "outputs": []
   },
   {
    "cell_type": "markdown",
